test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/sizeof_incomplete.plx
type struc s;

pub fn main(none) i32 {
    return sizeof<struc s> #  can't take size of incomplete type
}
